--- a/css/main.css
+++ b/css/main.css
@@ -11,7 +11,6 @@ html {
   -webkit-text-size-adjust: 100%;
   text-size-adjust: 100%;
   font-family: sans-serif;
-  font-family: "Abhaya Libre", serif;
 }
 
 *, *::before, *::after {
@@ -31,6 +30,11 @@ html {
 }
 
 .btn:hover {
+  background-color: #e6e6e6;
+  color: #333;
+}
+
+.card:hover {
   background-color: #e6e6e6;
   color: #333;
 }
